Adjusted image size

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meme-generator",
-  "homepage": "https://rngyn.github.io/meme-generator/",
+  "homepage": "https://rngyn.github.io/Meme-Generator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
